--- a/html/accueil.html
+++ b/html/accueil.html
@@ -73,7 +73,7 @@
                 <div class="col-lg-7">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Votes des joueurs :
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Pronostics des joueurs sur les vainqueurs de l'Euro 2016 :
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body" style="max-height: 376px;overflow-y: scroll;">
@@ -138,27 +138,33 @@
                 <div class="col-lg-8">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Vainqueurs de l'Euro?
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Sélectionnez ci-dessous les vainqueurs de l'Euro 2016:
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-lg-12">
+                                <div class="col-lg-6">
                                     <form id='FORM_VOTER1EURO'>
                                         <div class="form-group">
-                                          <label for="SELECT_VOTER1EURO">Sélectionner le vainqueur de l'Euro 2016:</label>
+                                          <label for="SELECT_VOTER1EURO">Vainqueur de l'Euro 2016:
+                                            <img id=""src="../images/trophy.png" ><em style="color:grey">30 Pts</em>
+                                           </label>
                                           <p class="text-primary col-md-12" id="SELECT_VOTER1EURO_VOTED" style="display:none">Vous avez voté :</p>
                                           <select class="form-control" id="SELECT_VOTER1EURO" style="">                                          
                                           </select>
                                         </div>
                                          <div class="form-group">                                          
-                                          <label for="SELECT_VOTER2EURO">Sélectionner le second de l'Euro 2016:</label>
+                                          <label for="SELECT_VOTER2EURO">Second de l'Euro 2016:
+                                            <img id=""src="../images/trophy.png" ><em style="color:grey">20 Pts</em>
+                                          </label>
                                           <p class="text-primary col-md-12" id="SELECT_VOTER2EURO_VOTED" style="display:none">Vous avez voté :</p>
                                           <select class="form-control" id="SELECT_VOTER2EURO" style="">                                          
                                           </select>
                                         </div>
                                          <div class="form-group">                                          
-                                          <label for="SELECT_VOTER3EURO">Sélectionner le troisième de l'Euro 2016:</label>
+                                          <label for="SELECT_VOTER3EURO">Troisième de l'Euro 2016:
+                                                <img id=""src="../images/trophy.png" ><em style="color:grey">15 Pts</em>
+                                          </label>
                                           <p class="text-primary col-md-12" id="SELECT_VOTER3EURO_VOTED" style="display:none">Vous avez voté :</p>
                                           <select class="form-control" id="SELECT_VOTER3EURO" style="">                                          
                                           </select>
@@ -169,7 +175,7 @@
                                         <p class="text-danger" id="voteVainqueursKO" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! rééssayez plus tard !</p>
                                         <p class="text-warning" id="voteVainqueursKOdoublon" style="height:auto; width:auto; display:none;"> Vote NON Envoyé ! Choisir une équipe différente pour chaque classement !</p>
                                     </form>
-                                </div>
+                                </div>                                
                             </div>
                             <!-- /.row -->
                         </div>
