--- a/html/accueil.html
+++ b/html/accueil.html
@@ -92,6 +92,16 @@
                             <tr>
                             <td colspan="3" id="votre_choix_match_du_jour_id" class="text-center"></td>
                           </tr>
+                          <tr>
+                            <td colspan="3" class="text-center">
+                                 <h3>Résultat de tous les votes:</h3>
+                                    <div class="progress">
+                                      <div id="progress_bar_id_vainqueur_match_du_jour"class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="     100" style="width: 0%;">
+                                          Pas de votes suffisant
+                                      </div>
+                                    </div>                                
+                            </td>
+                          </tr>
                         </tbody>
                       </table>
                     </div>
