--- a/html/accueil.html
+++ b/html/accueil.html
@@ -140,8 +140,8 @@
                                          </tr>
                                             <tr id="ligneMesVotesVainqueursEuro" class="info">
                                           </tr>
-                                          <tr id="tableClassementVainqueursEuro" >
-                                          </tr>
+                                          <tbody id="tableClassementVainqueursEuro" >
+                                          </tbody>
                                       </table>
                                 </div>
                             </div>
