--- a/html/accueil.html
+++ b/html/accueil.html
@@ -96,9 +96,19 @@
                           <tr>
                             <td colspan="3" class="text-center">
                                  <h3>Résultat de tous les votes:</h3>
-                                    <div class="progress">
-                                      <div id="progress_bar_id_vainqueur_match_du_jour"class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="     100" style="width: 0%;">
-                                          Pas de votes suffisant
+                                    <div class="progress" style="display:none;" id="display_progress_0">
+                                      <div id="progress_bar_id_vainqueur_match_du_jour_0"class="progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="     100" style="width: 0%;">
+                                          Pas de votes
+                                      </div>
+                                    </div> 
+                                    <div class="progress" style="display:none;" id="display_progress_1">
+                                      <div id="progress_bar_id_vainqueur_match_du_jour_1"class="progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="     100" style="width: 0%;">
+                                          Pas de votes
+                                      </div>
+                                    </div> 
+                                     <div class="progress" style="display:none;" id="display_progress_2">
+                                      <div id="progress_bar_id_vainqueur_match_du_jour_2"class="progress-bar-danger" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="     100" style="width: 0%;">
+                                          Pas de votes
                                       </div>
                                     </div>                                
                             </td>
