--- a/html/accueil.html
+++ b/html/accueil.html
@@ -122,7 +122,7 @@
                 <div class="col-lg-6">
                     <div class="panel panel-default">
                         <div class="panel-heading text-center">                                                
-                            <h3 >Classement : <img alt="trophy" src="../images/trophy.png" ></h3>
+                            <h3 >Classement provisoire : </h3>
                             <small  class="text-danger text-center"> <em></em></small>
                         </div>
                         <div class="panel-body" style="max-height: 376px;overflow-y: scroll;">                           
