--- a/html/accueil.html
+++ b/html/accueil.html
@@ -68,7 +68,7 @@
                 <div class="col-lg-6">
                     <div class="panel panel-default">
                     <div class="panel-heading text-center">                                                
-                        <h3 class="">Match du jour : <img alt="trophy" src="../images/trophy.png" ><em style="color:grey">20 Pts</em></h3>
+                        <h3 class="">Match du jour : <img alt="trophy" src="../images/trophy.png" ><em style="color:grey"><span id="id_points_match_jour"></span></em></h3>
                         <small id="id_expiration_match_jour" class="text-danger text-center"></small>
                     </div>
                     <div class="panel-body" style="max-height: 376px;overflow-y: scroll;">
