--- a/html/accueil.html
+++ b/html/accueil.html
@@ -287,18 +287,8 @@
     <!-- script chatroom -->
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 
-
+    <script src="../js/commun/util.js"></script>
     <script>
-        function getParameterByName(name, url) {
-            if (!url) url = window.location.href;
-            url = url.toLowerCase(); // This is just to avoid case sensitiveness  
-            name = name.replace(/[\[\]]/g, "\\$&").toLowerCase();// This is just to avoid case sensitiveness for query parameter name
-            var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-                results = regex.exec(url);
-            if (!results) return null;
-            if (!results[2]) return '';
-            return decodeURIComponent(results[2].replace(/\+/g, " "));
-        }
         document.getElementById('imgAvatar').src = "../images/avatar/"+getParameterByName('gender')+"/"+getParameterByName('avatar')+".png";
        // document.getElementById('pseudo_id').innerHTML = getParameterByName('pseudo').toUpperCase();
         document.getElementById('imgAvatar').href = document.location.href;
