--- a/html/accueil.html
+++ b/html/accueil.html
@@ -65,59 +65,9 @@
   </div><!-- /.container-fluid -->
 </nav>
             <div class="row">
-                <div class="col-lg-6">
-                    <div class="panel panel-default">
-                    <div class="panel-heading text-center">                                                
-                        <h3 class="">Match du jour : <img alt="trophy" src="../images/trophy.png" ><em style="color:grey"><span id="id_points_match_jour"></span></em></h3>
-                        <small id="id_expiration_match_jour" class="text-danger text-center" style="display:none;">Les votes sont clôturés !</small>
-                    </div>
-                    <div class="panel-body" style="max-height: 376px;overflow-y: scroll;">
-                    <div class="table-responsive">
-                      <table class="table">
-                        <thead>
-                          <tr>
-                            <th id="matchDuJourPays1" class="text-center"></th>
-                            <th id="matchDuJourNul" class="text-center"></th>
-                            <th id="matchDuJourPays2" class="text-center"></th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td class="text-center" id="btn_matchDuJour_id_1"></td>
-                            <td class="text-center" id="btn_matchDuJour_id_nul"></td>
-                            <td class="text-center" id="btn_matchDuJour_id_2"></td>
-                          </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
-                            <td colspan="3" id="votre_choix_match_du_jour_id" class="text-center"></td>
-                          </tr>
-                          <tr>
-                            <td colspan="3" class="text-center">
-                                 <h3>Résultat de tous les votes:</h3>
-                                    <div class="progress" style="display:none;" id="display_progress_0">
-                                      <div id="progress_bar_id_vainqueur_match_du_jour_0"class="progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="     100" style="width: 0%;">
-                                          Pas de votes
-                                      </div>
-                                    </div> 
-                                    <div class="progress" style="display:none;" id="display_progress_1">
-                                      <div id="progress_bar_id_vainqueur_match_du_jour_1"class="progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="     100" style="width: 0%;">
-                                          Pas de votes
-                                      </div>
-                                    </div> 
-                                     <div class="progress" style="display:none;" id="display_progress_2">
-                                      <div id="progress_bar_id_vainqueur_match_du_jour_2"class="progress-bar-danger" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="     100" style="width: 0%;">
-                                          Pas de votes
-                                      </div>
-                                    </div>                                
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                      </div>
-                </div>
-                </div>                
+                <span id="row_match_jour">
+                </span>
+                            
                 <!-- /.col-lg-6 -->
                 <div class="col-lg-6">
                     <div class="panel panel-default">
