--- a/html/accueil.html
+++ b/html/accueil.html
@@ -28,7 +28,12 @@
     <link href="../dist/css/sb-admin-2-css/morris.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../dist/css/sb-admin-2-css/font-awesome.min.css" rel="stylesheet" type="text/css">    
+    <link href="../dist/css/sb-admin-2-css/font-awesome.min.css" rel="stylesheet" type="text/css">  
+      <style>
+  .panel-body{
+     min-height: 450px;
+  }
+  </style>  
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
